<resources>
    <string name="app_name">FragmntTutorialCodeS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="forecast">Forecast</string>
    <string name="settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="sendMail">Send mail</string>
    <string name="rate">Rate</string>
    <string name="other">Other</string>
    <string name="privacy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="appSettings">App Settings</string>
    <string name="about">About</string>
</resources>